# openBibleViewer

./: .gitignore  .travis.yml  CHANGELOG  CMakeLists.txt  CMakeListsQt4.txt  INSTALL  README  README.md  TODO  TRANSLATION  UPDATES  appveyor.yml  debian.patch  doc.config  doxgen.config  icon.rc  index.html  openBibleViewer.desktop  openBibleViewer.files  openBibleViewer.includes  openBibleViewer.pro  openBibleViewer.spec  params.json  pro.patch  test.bat  windows_notes.txt
src/: CMakeLists.txt  anyoption.cpp  anyoption.h  config.h.cmake  data.qrc  icons.qrc  main.cpp  obv_cs.po  obv_cs.ts  obv_de.qm  obv_de.ts  obv_en.ts  obv_ru.ts
src/api/: api.cpp  api.h  bibleapi.cpp  bibleapi.h  biblewebchannel.cpp  biblewebchannel.h  moduleapi.cpp  moduleapi.h  notesapi.cpp  notesapi.h  searchapi.cpp  searchapi.h  verseselectionapi.cpp  verseselectionapi.h
src/bible/: bible.cpp  bible.h  biblequote.cpp  biblequote.h  zefania-bible.cpp  zefania-bible.h  zefania.cpp  zefania.h
src/clucene/: CMakeLists.txt
src/clucene/core/: CLucene.h  CMakeLists.txt
src/clucene/shared/: CMakeLists.txt
src/core/: CMakeLists.txt  KoXmlNS.cpp  KoXmlNS.h  KoXmlReader.cpp  KoXmlReader.h  KoXmlReaderForward.h  KoXmlWriter.cpp  KoXmlWriter.h  actions.cpp  actions.h  basicclass.cpp  basicclass.h  bibledisplay.cpp  bibledisplay.h  bibledisplaysettings.cpp  bibledisplaysettings.h  bibleinfo.h  biblelink.cpp  biblelink.h  bibleurl.cpp  bibleurl.h  blockrules.cpp  blockrules.h  book.cpp  book.h  bookmarks.cpp  chapter.h  config.h  context.cpp  context.h  core.h  dbghelper.cpp  dbghelper.h  downloadinfile.cpp  downloadinfile.h  faststart.cpp  faststart.h  goto.cpp  goto.h  history.cpp  (+68 more)
src/core/bible/: bibledisplay.cpp  bibledisplay.h  bibleurl.cpp  bibleurl.h  bibleurlrange.cpp  bibleurlrange.h  book.cpp  book.h  booknames.cpp  booknames.h  chapter.cpp  chapter.h  range.cpp  range.h  rangeenum.cpp  rangeenum.h  ranges.cpp  ranges.h  textrange.cpp  textrange.h  textranges.cpp  textranges.h  verse.cpp  verse.h  versification.cpp  versification.h
src/core/books/: booktree.cpp  booktree.h
src/core/link/: biblelink.cpp  biblelink.h  strongurl.cpp  strongurl.h  url.cpp  url.h  urlconverter.cpp  urlconverter.h  urlconverter2.cpp  urlconverter2.h  verseurl.cpp  verseurl.h  verseurlrange.cpp  verseurlrange.h
src/core/module/: README.md  metainfo.h  module.cpp  module.h  modulemanager.cpp  modulemanager.h  modulemap.cpp  modulemap.h  simplemodule.cpp  simplemodule.h  simplemoduleclass.cpp  simplemoduleclass.h  textrangesversemodule.cpp  textrangesversemodule.h  versemodule.h  versemodulecache.h  versetable.cpp  versetable.h  webpage.cpp  webpage.h
src/core/notes/: notes.cpp  notes.h  notesitemview.cpp  notesitemview.h  simplenotes.cpp  simplenotes.h  textnotes.cpp  textnotes.h  xmlnotes.cpp  xmlnotes.h
src/core/raw/: blockidgen.cpp  blockidgen.h  blocktools.cpp  blocktools.h  bookblock.cpp  bookblock.h  brfragment.cpp  brfragment.h  captionblock.cpp  captionblock.h  chapterblock.cpp  chapterblock.h  divblock.cpp  divblock.h  elementaryblock.cpp  elementaryblock.h  gramblock.cpp  gramblock.h  mediablock.cpp  mediablock.h  noteblock.cpp  noteblock.h  prologblock.cpp  prologblock.h  rblock.cpp  rblock.h  remarksblock.cpp  remarksblock.h  rmetadata.cpp  rmetadata.h  styleblock.cpp  styleblock.h  stylefragment.cpp  stylefragment.h  supblock.cpp  supblock.h  textfragment.cpp  textfragment.h  verseblock.cpp  verseblock.h  (+2 more)
src/core/search/: search.cpp  search.h  searchhit.cpp  searchhit.h  searchprovider.cpp  searchprovider.h  searchproviders.cpp  searchproviders.h  searchquery.cpp  searchquery.h  searchresult.cpp  searchresult.h  searchtools.cpp  searchtools.h
src/core/settings/: bibledisplaysettings.cpp  bibledisplaysettings.h  modulecache.cpp  modulecache.h  moduledisplaysettings.cpp  moduledisplaysettings.h  modulesettings.cpp  modulesettings.h  session.cpp  session.h  (+4 more)
src/data/: config.rb  default.css  modules.xml  obv_cs.qm  obv_de.qm  obv_it.qm  obv_ru.qm  obv_sk.qm  obv_tr.qm
src/kernel/: bookmarks.cpp  chapter.h  config.h  notes.cpp  notes.h  search.h  stelle.h  tabcache.cpp  tabcache.h  xbelreader.cpp  xbelreader.h  xbelwriter.cpp  xbelwriter.h
src/locales/: obv_cs.ts  obv_de.ts  obv_en.ts  obv_fr.ts  obv_it.ts  obv_ru.ts  obv_sk.ts  obv_tr.ts  ts-files
src/module/: bible.cpp  bible.h  biblelist.cpp  biblelist.h  biblemodule.cpp  biblemodule.h  biblequote-dict.cpp  biblequote-dict.h  biblequote.cpp  biblequote.h  dictionary.cpp  dictionary.h  metainfo.cpp  metainfo.h  module.cpp  module.h  modulemanager.cpp  modulemanager.h  modulemap.cpp  modulemap.h  moduletools.cpp  moduletools.h  searchablemodule.cpp  searchablemodule.h  simplemodule.cpp  simplemodule.h  simplemoduleclass.cpp  simplemoduleclass.h  strong.cpp  strong.h  textrangesversemodule.cpp  textrangesversemodule.h  thewordbible.cpp  thewordbible.h  versemodule.cpp  versemodule.h  versemodulecache.cpp  versemodulecache.h  versetable.cpp  versetable.h  (+8 more)
src/obv/: de.po  obv.pot  ru.po
src/test/: CMakeLists.txt  biblelinktest.cpp  biblelinktest.h  moduletoolstest.cpp  moduletoolstest.h  rtftoolstest.cpp  rtftoolstest.h  testtools.cpp  testtools.h  testversereplacer.cpp  v11ntest.cpp  v11ntest.h  versereplacertest.cpp  versereplacertest.cpp.autosave  versereplacertest.h  zefaniabibletest.cpp  zefaniabibletest.h
src/ui/: aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  actions.cpp  actions.h  biblepassagedialog.cpp  biblepassagedialog.h  biblepassageframe.cpp  biblepassageframe.h  biblepassageframe.ui  checkableproxymodel.cpp  checkableproxymodel.h  context.cpp  context.h  delayedexecutiontimer.cpp  delayedexecutiontimer.h  highlighter.cpp  historylineedit.cpp  historylineedit.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  markcategories.cpp  markcategories.h  markcategories.ui  marklist.cpp  marklist.h  marklist.ui  mdiform.cpp  mdiform.h  mdiform.ui  moduleconfigdialog.cpp  moduleconfigdialog.h  moduleconfigdialog.ui  moduledialog.cpp  moduledialog.h  moduledialog.ui  moduledownloaddialog.cpp  moduledownloaddialog.h  moduledownloaddialog.ui  (+29 more)
(+1228 files in other folders)
